# Agents_Debate

./: .env-example  .gitignore  AI_Agent_Debate.md  README.md  generate_html.py  pyproject.toml  run_once.py
assets/: architecture_c4.md  architecture_oop.md  architecture_uml_sequence.md  debate_example.html
config/: logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_api_gatekeeper.md  PRD_debate_orchestrator.md  PRD_debater_agents.md  PRD_debater_skills.md  PRD_ipc_protocol.md  PRD_judge_agent.md  PRD_logging.md  PRD_watchdog.md  PROMPTS_BOOK.md  TODO.md
notebooks/: debate_analysis.ipynb
results/: debate_2026-05-28_1800.html  debate_2026-05-28_1800.json  debate_2026-05-28_1800.txt
src/: con_runner.py  judge_runner.py  main.py  pro_runner.py
src/debate/: __init__.py
src/debate/agents/: __init__.py  base_agent.py  watchdog.py
src/debate/agents/debaters/: __init__.py  base_debater.py  con_agent.py  pro_agent.py  (+2 more)
src/debate/ipc/: __init__.py  channel.py  messages.py  schemas.py
src/debate/sdk/: __init__.py  factory.py  sdk.py
src/debate/services/: __init__.py  orchestrator.py
src/debate/shared/: __init__.py  config.py  constants.py  cost_aggregator.py  exceptions.py  gatekeeper.py  llm_anthropic.py  llm_gemini.py  llm_provider.py  llm_retry.py  logger.py  version.py  web_search.py
src/debate/skills/: loader.py
tests/: conftest.py
tests/integration/: __init__.py  test_full_debate.py  test_watchdog_recovery.py
tests/unit/test_debate/: __init__.py  test_factory.py  test_orchestrator.py  test_sdk.py  test_sdk_timeout.py
(+42 files in other folders)
