[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-debate"
version = "1.0.0"
description = "AI Agent Debate Orchestration System — MSC Exercise 02"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tavily-python>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/debate"]

# ---------------------------------------------------------------------------
# Ruff — linter configuration (zero violations required)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "src/pro_runner.py", "src/con_runner.py", "src/judge_runner.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
